samples/_failures_safe/1761356126_093bc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_434d06fb.c: In function ‘main’:
./samples/SAFE/__tmp_434d06fb.c:160:9: error: expected expression at end of input
  160 |         } else if (
      |         ^
./samples/SAFE/__tmp_434d06fb.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_434d06fb.c:160:9: error: expected declaration or statement at end of input
